--- a/esp/platformio.ini
+++ b/esp/platformio.ini
@@ -13,3 +13,6 @@ platform = espressif32
 board = esp32cam
 framework = arduino
 monitor_speed = 115200
+lib_deps =
+    ESP Async WebServer
+    ArduinoJson
