--- a/esp/platformio.ini
+++ b/esp/platformio.ini
@@ -14,3 +14,5 @@ board = esp32cam
 framework = arduino
 monitor_speed = 115200
 test_framework = unity
+lib_deps = 
+    https://github.com/bblanchon/ArduinoJson.git
