--- a/esp/platformio.ini
+++ b/esp/platformio.ini
@@ -14,3 +14,6 @@ board = esp32cam
 framework = arduino
 monitor_speed = 115200
 test_framework = unity
+lib_deps =
+    https://github.com/me-no-dev/ESPAsyncWebServer.git
+    https://github.com/bblanchon/ArduinoJson.git
