--- a/esp/platformio.ini
+++ b/esp/platformio.ini
@@ -15,5 +15,7 @@ framework = arduino
 monitor_speed = 115200
 test_framework = unity
 lib_deps =
+    bblanchon/ArduinoJson@^7.0.3
+    plerup/EspSoftwareSerial@^8.2.0
     https://github.com/me-no-dev/ESPAsyncWebServer.git
-    https://github.com/bblanchon/ArduinoJson.git
+    https://github.com/dok-net/ghostl.git
