--- a/esp/.vscode/settings.json
+++ b/esp/.vscode/settings.json
@@ -58,7 +58,8 @@
         "mutex": "cpp",
         "thread": "cpp",
         "list": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "queue": "cpp"
     },
     "cmake.configureOnOpen": false,
     "C_Cpp.vcFormat.indent.lambdaBracesWhenParameter": false
