run clang format on all of code + unit test for promises

--- a/esp/platformio.ini
+++ b/esp/platformio.ini
@@ -14,8 +14,10 @@ board = esp32cam
 framework = arduino
 monitor_speed = 115200
 test_framework = unity
+lib_ldf_mode=deep
 lib_deps =
     bblanchon/ArduinoJson@^7.0.3
     plerup/EspSoftwareSerial@8.1.0
     https://github.com/me-no-dev/ESPAsyncWebServer.git
     https://github.com/bblanchon/ArduinoStreamUtils
+    EEPROM
