--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "markdown-pdf.mermaidServer": "https://unpkg.com/mermaid@9.4.0/dist/mermaid.min.js",
-    "markdown-pdf.headerTemplate": "<div style=\"font-size: 9px; margin-left: 1cm;\"> <span>Project WRover</span></div> <div style=\"font-size: 9px; margin-left: auto; margin-right: 1cm; \">%%ISO-DATE%%</div>",
-    "markdown-pdf.footerTemplate": "<div style=\"font-size: 9px; margin: 0 auto;\"> <span class='pageNumber'></span> / <span class='totalPages'></span></div>"
+  "markdown-pdf.mermaidServer": "https://unpkg.com/mermaid@9.4.0/dist/mermaid.min.js",
+  "markdown-pdf.displayHeaderFooter": false,
+  "markdown-pdf.format": "Letter"
 }
