--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
           cd web
           npm ci
           npm run build
-          mv build docs
+          mv build ../docs
       - name: Push
         env:
           MESSAGE: ${{ github.event.head_commit.message }}
